--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,8 @@ $spacing-unit:     30px;
 
 $text-color:       #454545;
 $background-color: #fff;
-$brand-color:      #FF8C00 // #5aa3d1; #eb5a5b;
+$brand-color:      #FF8C00 
+// #5aa3d1; #eb5a5b;
 $brand-color-light:lighten($brand-color, 20%);
 
 $grey-color:       #828282;
