--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,6 @@
   Built with Jekyll using
   <a href="https://github.com/kuoa/julia" target="_blank">Julia</a>
   theme
-  <img src='/DnD/assets/logo.png'>
+  <img src='/assets/logo.png'>
 
 </div>
