Fix temp prev URL

--- a/_includes/prev_next_post.html
+++ b/_includes/prev_next_post.html
@@ -1,7 +1,7 @@
 <div class="post-paging">
   {% if page.previous %}
     <div class="left">
-      <a href="{{ site.url }}{{ site.url }}{{ page.previous.url }}">
+      <a href="{{ site.url }}{{ page.previous.url }}">
         <i class="fa fa-angle-left fa-2x"></i>
       </a>
     </div>
